--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -143,8 +143,7 @@
     "        x, y = int(self.x), int(self.y)\n",
     "        pygame.draw.circle(screen, (255,0,0), (x,y), 5, 1)\n",
     "    \n",
-    "    # The rule of separation.\n",
-    "    # r_s : \n",
+    "    #separation: dot to avoid crowding local flockmates\n",
     "    def separation(self, r_s):\n",
     "        tvx = tvy = c = 0\n",
     "        \n",
@@ -159,7 +158,7 @@
     "        else:\n",
     "            self.vx_s, self.vy_s = self.vx, self.vy\n",
     "    \n",
-    "    # the rule of alignment.\n",
+    "    # alignment: dot towards the average heading of local flockmates.\n",
     "    def alignment(self, r_a):\n",
     "        tvx = tvy = c = 0\n",
     "        \n",
@@ -175,7 +174,7 @@
     "            self.vx_a, self.vy_a = self.vx, self.vy\n",
     "        \n",
     "        \n",
-    "    # the rule of cohesion.\n",
+    "    #cohesion: dot to move towards the average position (center of mass) of local flockmates   \n",
     "    def cohesion(self, r_c):\n",
     "        tx = ty = c = 0\n",
     "        \n",
@@ -198,7 +197,7 @@
     "        #self.others = tuple([(a, math.sqrt((a.x - self.x)**2 \\\n",
     "        #                    + (a.y - self.y)**2)) \\\n",
     "        #                     for a in agent_list if a != self])\n",
-    "        \n",
+    "        # If the above program is rewritten, it will be as follows.\n",
     "        tpls = ()\n",
     "        for a in agent_list:\n",
     "            if a != self:\n",
