--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,22 +143,28 @@
     "        x, y = int(self.x), int(self.y)\n",
     "        pygame.draw.circle(screen, (255,0,0), (x,y), 5, 1)\n",
     "    \n",
-    "    #separation: dot to avoid crowding local flockmates\n",
+    "    # separation: dot to avoid crowding local flockmates\n",
+    "    # r_s : the radius of the circle of private area. \n",
     "    def separation(self, r_s):\n",
-    "        tvx = tvy = c = 0\n",
+    "        tvx = tvy = cnt = 0\n",
     "        \n",
-    "        for a in self.others:\n",
-    "            if a[1] < r_s and a[1] != 0:\n",
-    "                tvx -= (a[0].x - self.x) / a[1]\n",
-    "                tvy -= (a[0].y - self.y) / a[1]\n",
-    "                c += 1\n",
+    "        # If the distance to other dots is too short, when it is less than r_s, \n",
+    "        # calculate a unit vector in the direction of repulsion and add.\n",
+    "        # d[1] : distance from myself to other dots.\n",
+    "        for d in self.others:\n",
+    "            if d[1] < r_s:\n",
+    "                tvx -= (d[0].x - self.x) / d[1]\n",
+    "                tvy -= (d[0].y - self.y) / d[1]\n",
+    "                cnt += 1\n",
     "                \n",
-    "        if c != 0:\n",
-    "            self.vx_s, self.vy_s = tvx / c, tvy / c\n",
+    "        # Calculate an average of the unit vector by divide the sum of a unit vector by a number of it.\n",
+    "        if cnt != 0:\n",
+    "            self.vx_s, self.vy_s = tvx / cnt, tvy / cnt\n",
     "        else:\n",
     "            self.vx_s, self.vy_s = self.vx, self.vy\n",
     "    \n",
     "    # alignment: dot towards the average heading of local flockmates.\n",
+    "    # \n",
     "    def alignment(self, r_a):\n",
     "        tvx = tvy = c = 0\n",
     "        \n",
@@ -231,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
