--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -144,13 +144,13 @@
     "        pygame.draw.circle(screen, (255,0,0), (x,y), 5, 1)\n",
     "    \n",
     "    # separation: dot to avoid crowding local flockmates\n",
-    "    # r_s : the radius of the circle of private area. \n",
+    "    # r_s : The radius of the circle of private area. \n",
     "    def separation(self, r_s):\n",
     "        tvx = tvy = cnt = 0\n",
     "        \n",
     "        # If the distance to other dots is too short, when it is less than r_s, \n",
     "        # calculate a unit vector in the direction of repulsion and add.\n",
-    "        # d[1] : distance from myself to other dots.\n",
+    "        # d[1] : The distance from myself to other dots.\n",
     "        for d in self.others:\n",
     "            if d[1] < r_s:\n",
     "                tvx -= (d[0].x - self.x) / d[1]\n",
@@ -164,7 +164,7 @@
     "            self.vx_s, self.vy_s = self.vx, self.vy\n",
     "    \n",
     "    # alignment: dot towards the average heading of local flockmates.\n",
-    "    # \n",
+    "    # r_a : The radius of the circle to judge whether to align or not.\n",
     "    def alignment(self, r_a):\n",
     "        tvx = tvy = c = 0\n",
     "        \n",
@@ -178,7 +178,6 @@
     "            self.vx_a, self.vy_a = tvx / c, tvy / c\n",
     "        else:\n",
     "            self.vx_a, self.vy_a = self.vx, self.vy\n",
-    "        \n",
     "        \n",
     "    #cohesion: dot to move towards the average position (center of mass) of local flockmates   \n",
     "    def cohesion(self, r_c):\n",
