--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,15 +166,18 @@
     "    # alignment: dot towards the average heading of local flockmates.\n",
     "    # r_a : The radius of the circle to judge whether to align or not.\n",
     "    def alignment(self, r_a):\n",
-    "        tvx = tvy = c = 0\n",
+    "        tvx = tvy = cnt = 0\n",
     "        \n",
+    "        # Sum all velocity of dots that are inside of a circle with radius \"r_a\".\n",
+    "        # d[1] : The distance from myself to other dots.\n",
     "        for a in self.others:\n",
     "            if a[1] < r_a:\n",
     "                tvx += a[0].vx\n",
     "                tvy += a[0].vy\n",
-    "                c += 1\n",
+    "                cnt += 1\n",
     "                \n",
-    "        if c != 0:\n",
+    "        # Calculate an average of the unit vector by divide the sum of a unit vector by a number of it.\n",
+    "        if cnt != 0:\n",
     "            self.vx_a, self.vy_a = tvx / c, tvy / c\n",
     "        else:\n",
     "            self.vx_a, self.vy_a = self.vx, self.vy\n",
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
