--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -183,18 +183,25 @@
     "            self.vx_a, self.vy_a = self.vx, self.vy\n",
     "        \n",
     "    #cohesion: dot to move towards the average position (center of mass) of local flockmates   \n",
+    "    # r_a : The radius of the circle to judge whether the other dots are the same flockmate or not.\n",
     "    def cohesion(self, r_c):\n",
-    "        tx = ty = c = 0\n",
+    "        tx = ty = cnt = 0\n",
     "        \n",
+    "        # Sum all x and y coordinate of dots that are inside of a circle with radius \"r_c\".\n",
+    "        # d[1] : The distance from myself to other dots.\n",
     "        for a in self.others:\n",
     "            if a[1] < r_c:\n",
     "                tx += a[0].x\n",
     "                ty += a[0].y\n",
-    "                c += 1\n",
-    "                \n",
-    "        if c != 0:\n",
+    "                cnt += 1\n",
+    "        \n",
+    "        # Calucurate the coordiate ot the center of gravity.\n",
+    "        if cnt != 0:\n",
     "            tx, ty = tx / c, ty / c\n",
+    "            # Calculate the distance from itself to the center of gravity.\n",
     "            d = math.sqrt((tx - self.x)**2 + (ty - self.y)**2)\n",
+    "            \n",
+    "            # Calculate he unit vector.\n",
     "            if d != 0:\n",
     "                self.vx_c = (tx - self.x) / d\n",
     "                self.vy_c = (ty - self.y) / d\n",
