--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -197,7 +197,7 @@
     "        \n",
     "        # Calucurate the coordiate ot the center of gravity.\n",
     "        if cnt != 0:\n",
-    "            tx, ty = tx / c, ty / c\n",
+    "            tx, ty = tx / cnt, ty / cnt\n",
     "            # Calculate the distance from itself to the center of gravity.\n",
     "            d = math.sqrt((tx - self.x)**2 + (ty - self.y)**2)\n",
     "            \n",
