--- a/study06_class.ipynb
+++ b/study06_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,87 +21,75 @@
     "\n",
     "    # Initialize RPS.\n",
     "    def __init__(self):\n",
-    "        self.you = 0\n",
-    "        self.enemy = 0\n",
-    "        self.judge = 0\n",
-    "        self.result = \"No result.\"\n",
-    "    \n",
-    "    def you(self, you):\n",
-    "        self.you = you\n",
+    "        self.y_hand, self.e_hand, self.judgement = 0, 0, 0\n",
+    "\n",
+    "    def you(self, _y_hand):\n",
+    "        self.y_hand = _y_hand\n",
     "\n",
     "    def enemy(self):\n",
-    "        self.enemy = random.randint(0, 2)\n",
+    "        self.e_hand = random.randint(0, 2)\n",
     "\n",
-    "    def description(self):\n",
-    "        print(\"Rock : 0, Scissors : 1, Paper : 2\")\n",
-    "\n",
-    "    def judge(you):\n",
-    "        self.judge = (self.you - self.enemy + 3) % 3\n",
+    "    def judge(self):\n",
+    "        self.judgement = (self.y_hand - self.e_hand + 3) % 3\n",
     "    \n",
     "    def result(self):\n",
-    "        y = self.HANDS.get(self.you)\n",
-    "        e = self.HANDS.get(self.enemy)\n",
-    "        r = self.JUDGE.get(self.judge)\n",
-    "        self.result = 'your hand : {0}, enemy\\'s hand : {1}, result : {2}'.format(y, e, r) "
+    "        r = self.JUDGE.get(self.judgement)\n",
+    "        self.result = 'your hand : {0}, enemy\\'s hand : {1}, result : {2}'.format(self.y_hand, self.e_hand, r) \n",
+    "        return self.result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Game:\n",
+    "class GameFlow:\n",
     "    # Initialize game.\n",
     "    def __init__(self):\n",
+    "        self.game_mode = GAME_WAIT\n",
     "        self.RPS = RockPaperScissors()\n",
+    "        self.result = \"No result.\"\n",
     "    \n",
-    "    def pley(you):\n",
-    "        self.RPS.you(you)\n",
-    "        self.enemy =  self.RPS.enemy()\n",
-    "        self.judge =  self.RPS.judge()\n",
-    "        self.result = self.RPS.result()"
+    "    def play(self, _y_hand):\n",
+    "        self.game_mode = GAME_ONGOING\n",
+    "        self.RPS.you(_y_hand)\n",
+    "        self.RPS.enemy()\n",
+    "        self.RPS.judge()\n",
+    "        self.result = self.RPS.result()\n",
+    "        \n",
+    "    def showResult(self):\n",
+    "        self.game_mode = GAME_END\n",
+    "        return self.result\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_status():\n",
-    "    global game\n",
+    "def game_play(y_hand):\n",
     "    global msg_var\n",
-    "    result = game.result\n",
-    "    msg_var.set(msg)"
+    "    game = GameFlow()\n",
+    "    game.play(y_hand)\n",
+    "    #msg_var.set(game.result)\n",
+    "    print(game.result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def game_play(you):\n",
-    "    global game\n",
-    "    game.play(you)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'game' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-fb137a912d62>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# Player's button.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mbutton_Rock\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtkinter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mButton\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Rock\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcommand\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgame_play\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mbutton_Rock\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-25-cadfc6beabea>\u001b[0m in \u001b[0;36mgame_play\u001b[1;34m(you)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgame_play\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myou\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mglobal\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mgame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myou\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mshow_status\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'game' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your hand : 0, enemy's hand : 1, result : WIN\n",
+      "your hand : 1, enemy's hand : 0, result : LOSE\n",
+      "your hand : 2, enemy's hand : 1, result : LOSE\n"
      ]
     }
    ],
@@ -111,6 +99,9 @@
     "BOARD_PX_SIZE = 500\n",
     "window_width = BOARD_PX_SIZE\n",
     "window_height = BOARD_PX_SIZE\n",
+    "GAME_WAIT = 0\n",
+    "GAME_ONGOING = 1\n",
+    "GAME_END = 2\n",
     "\n",
     "root = tkinter.Tk()\n",
     "root.title(\"Rock Paper Scissors\")\n",
@@ -131,10 +122,15 @@
     "msg_label = tkinter.Label(root, textvariable = msg_var)\n",
     "msg_label.place(x = 100, y = 150)\n",
     "\n",
-    "show_status()\n",
-    "\n",
     "root.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
