--- a/study06_class.ipynb
+++ b/study06_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,63 +74,62 @@
     "    global msg_var\n",
     "    game = GameFlow()\n",
     "    game.play(y_hand)\n",
-    "    #msg_var.set(game.result)\n",
-    "    print(game.result)"
+    "    return game.showResult()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "your hand : 0, enemy's hand : 1, result : WIN\n",
-      "your hand : 1, enemy's hand : 0, result : LOSE\n",
-      "your hand : 2, enemy's hand : 1, result : LOSE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import tkinter\n",
+    "from tkinter import *\n",
+    "from tkinter import ttk\n",
     "\n",
-    "BOARD_PX_SIZE = 500\n",
-    "window_width = BOARD_PX_SIZE\n",
-    "window_height = BOARD_PX_SIZE\n",
+    "MAIN_WINDOW_SIZE = 500\n",
+    "window_width = MAIN_WINDOW_SIZE\n",
+    "window_height = MAIN_WINDOW_SIZE\n",
     "GAME_WAIT = 0\n",
     "GAME_ONGOING = 1\n",
     "GAME_END = 2\n",
     "\n",
-    "root = tkinter.Tk()\n",
+    "root = Tk()\n",
     "root.title(\"Rock Paper Scissors\")\n",
-    "root.geometry(str(window_width) + \"x\" + str(window_height))    \n",
+    "root.minsize(width=window_width, height=window_height)\n",
     "\n",
-    "# Player's button.\n",
-    "button_Rock = tkinter.Button(root, text = \"Rock\", width=15, command=game_play(0))\n",
-    "button_Rock.place(x = 50, y = 20)\n",
+    "msg = StringVar()\n",
     "\n",
-    "button_Scissors = tkinter.Button(root, text = \"Scissors\", width=15, command=game_play(1))\n",
-    "button_Scissors.place(x = 50, y = 60)\n",
+    "# Frame as Widget Container\n",
+    "frm = ttk.Frame( root, padding=5)\n",
+    "frm.grid()\n",
     "\n",
-    "button_Paper = tkinter.Button(root, text = \"Paper\", width=15, command=game_play(2))\n",
-    "button_Paper.place(x = 50, y = 100)\n",
+    "# Rock button\n",
+    "def btn_clicked(n):\n",
+    "    if n == 0:\n",
+    "        button0.state(['pressed'])\n",
+    "        button1.state(['!pressed'])\n",
+    "    elif n == 1:\n",
+    "        button0.state(['!pressed'])\n",
+    "        button1.state(['pressed'])\n",
+    "    msg.set(game_play(n))\n",
     "\n",
-    "# Show status.\n",
-    "msg_var = tkinter.StringVar()\n",
-    "msg_label = tkinter.Label(root, textvariable = msg_var)\n",
-    "msg_label.place(x = 100, y = 150)\n",
+    "button0 = ttk.Button(master=frm, text='Rock', compound=TOP, width=15)\n",
+    "button0['command'] = lambda: btn_clicked(0)\n",
+    "button0.grid(row=1, rowspan=2, column=1)\n",
+    "\n",
+    "button1 = ttk.Button(master=frm, text='Paper', compound=TOP, width=15)\n",
+    "button1['command'] = lambda: btn_clicked(1)\n",
+    "button1.grid(row=1, column=2)\n",
+    "\n",
+    "button2 = ttk.Button(master=frm, text='Scissors', compound=TOP, width=15)\n",
+    "button2['command'] = lambda: btn_clicked(2)\n",
+    "button2.grid(row=1, column=3)\n",
+    "\n",
+    "label1 = ttk.Label(master=frm, textvariable=msg)\n",
+    "label1.grid(row=2, column=1, columnspan=3)\n",
     "\n",
     "root.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
