--- a/study06_class.ipynb
+++ b/study06_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,53 +79,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import *\n",
-    "from tkinter import ttk\n",
+    "import tkinter as tk\n",
     "\n",
-    "MAIN_WINDOW_SIZE = 500\n",
+    "MAIN_WINDOW_SIZE = 300\n",
     "window_width = MAIN_WINDOW_SIZE\n",
     "window_height = MAIN_WINDOW_SIZE\n",
     "GAME_WAIT = 0\n",
     "GAME_ONGOING = 1\n",
     "GAME_END = 2\n",
     "\n",
-    "root = Tk()\n",
+    "root = tk.Tk()\n",
     "root.title(\"Rock Paper Scissors\")\n",
-    "root.minsize(width=window_width, height=window_height)\n",
+    "#root.minsize(width=window_width, height=window_height)\n",
     "\n",
-    "msg = StringVar()\n",
+    "msg = tk.StringVar()\n",
     "\n",
     "# Frame as Widget Container\n",
-    "frm = ttk.Frame( root, padding=5)\n",
+    "frm = tk.Frame(root, relief='flat', borderwidth=5)\n",
     "frm.grid()\n",
     "\n",
     "# Rock button\n",
     "def btn_clicked(n):\n",
     "    if n == 0:\n",
-    "        button0.state(['pressed'])\n",
-    "        button1.state(['!pressed'])\n",
+    "        button0.config(relief=tk.SUNKEN, fg='red')\n",
+    "        button1.config(relief=tk.RAISED, fg='black')\n",
+    "        button2.config(relief=tk.RAISED, fg='black')\n",
     "    elif n == 1:\n",
-    "        button0.state(['!pressed'])\n",
-    "        button1.state(['pressed'])\n",
+    "        button0.config(relief=tk.RAISED, fg='black')\n",
+    "        button1.config(relief=tk.SUNKEN, fg='red')\n",
+    "        button2.config(relief=tk.RAISED, fg='black')\n",
+    "    elif n == 2:\n",
+    "        button0.config(relief=tk.RAISED, fg='black')\n",
+    "        button1.config(relief=tk.RAISED, fg='red')\n",
+    "        button2.config(relief=tk.SUNKEN, fg='black')\n",
     "    msg.set(game_play(n))\n",
     "\n",
-    "button0 = ttk.Button(master=frm, text='Rock', compound=TOP, width=15)\n",
+    "button0 = tk.Button(master=frm, text='Rock', compound=tk.TOP, height=5, width=15)\n",
     "button0['command'] = lambda: btn_clicked(0)\n",
-    "button0.grid(row=1, rowspan=2, column=1)\n",
+    "button0.grid(row=1, column=1)\n",
     "\n",
-    "button1 = ttk.Button(master=frm, text='Paper', compound=TOP, width=15)\n",
+    "button1 = tk.Button(master=frm, text='Paper', compound=tk.TOP, height=5, width=15)\n",
     "button1['command'] = lambda: btn_clicked(1)\n",
     "button1.grid(row=1, column=2)\n",
     "\n",
-    "button2 = ttk.Button(master=frm, text='Scissors', compound=TOP, width=15)\n",
+    "button2 = tk.Button(master=frm, text='Scissors', compound=tk.TOP, height=5, width=15)\n",
     "button2['command'] = lambda: btn_clicked(2)\n",
     "button2.grid(row=1, column=3)\n",
     "\n",
-    "label1 = ttk.Label(master=frm, textvariable=msg)\n",
+    "label1 = tk.Label(master=frm, textvariable=msg)\n",
     "label1.grid(row=2, column=1, columnspan=3)\n",
     "\n",
     "root.mainloop()"
