--- a/study06_class_tkinter.ipynb
+++ b/study06_class_tkinter.ipynb
@@ -1,12 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classを使ってじゃんけんゲームを作る。UIはTkinter。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. じゃんけんゲームクラス\n",
+    "  - class内のメソッドの名前と、引数の名前が同一の場合エラーとなるため、***引数の接頭辞に\"_\"***を付けることにする。"
    ]
   },
   {
@@ -23,8 +38,8 @@
     "    def __init__(self):\n",
     "        self.y_hand, self.e_hand, self.judgement = 0, 0, 0\n",
     "\n",
-    "    def you(self, _y_hand):\n",
-    "        self.y_hand = _y_hand\n",
+    "    def you(self, _you):\n",
+    "        self.y_hand = _you\n",
     "\n",
     "    def enemy(self):\n",
     "        self.e_hand = random.randint(0, 2)\n",
@@ -36,6 +51,14 @@
     "        r = self.JUDGE.get(self.judgement)\n",
     "        self.result = 'your hand : {0}, enemy\\'s hand : {1}, result : {2}'.format(self.y_hand, self.e_hand, r) \n",
     "        return self.result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. ゲームの流れを定義するクラス\n",
+    "  - じゃんけんクラスのインスタンスを作り、プレイヤーの手を引き数に取りゲームを一通り進める。"
    ]
   },
   {
@@ -51,9 +74,9 @@
     "        self.RPS = RockPaperScissors()\n",
     "        self.result = \"No result.\"\n",
     "    \n",
-    "    def play(self, _y_hand):\n",
+    "    def play(self, _player):\n",
     "        self.game_mode = GAME_ONGOING\n",
-    "        self.RPS.you(_y_hand)\n",
+    "        self.RPS.you(_player)\n",
     "        self.RPS.enemy()\n",
     "        self.RPS.judge()\n",
     "        self.result = self.RPS.result()\n",
@@ -62,6 +85,14 @@
     "        self.game_mode = GAME_END\n",
     "        return self.result\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. ゲームを実行する\n",
+    "  - ゲームの流れを定義するクラスを実行する。"
    ]
   },
   {
@@ -75,6 +106,14 @@
     "    game = GameFlow()\n",
     "    game.play(y_hand)\n",
     "    return game.showResult()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. メイン関数\n",
+    "  - tiinterでGUIを作り、じゃんけんゲームを実行する。"
    ]
   },
   {
@@ -135,6 +174,13 @@
     "\n",
     "root.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -153,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
