--- a/study06_class_tkinter.ipynb
+++ b/study06_class_tkinter.ipynb
@@ -42,7 +42,10 @@
     "        self.y_hand = _you\n",
     "\n",
     "    def enemy(self):\n",
-    "        self.e_hand = random.randint(0, 2)\n",
+    "        # ランダムに敵の手を決める場合\n",
+    "        # self.e_hand = random.randint(0, 2)\n",
+    "        # プレイヤーの手を見て、敵の手を決める。必ず敵が勝つ。\n",
+    "        self.e_hand = self.y_hand - 1\n",
     "\n",
     "    def judge(self):\n",
     "        self.judgement = (self.y_hand - self.e_hand + 3) % 3\n",
@@ -153,8 +156,8 @@
     "        button2.config(relief=tk.RAISED, fg='black')\n",
     "    elif n == 2:\n",
     "        button0.config(relief=tk.RAISED, fg='black')\n",
-    "        button1.config(relief=tk.RAISED, fg='red')\n",
-    "        button2.config(relief=tk.SUNKEN, fg='black')\n",
+    "        button1.config(relief=tk.RAISED, fg='black')\n",
+    "        button2.config(relief=tk.SUNKEN, fg='red')\n",
     "    msg.set(game_play(n))\n",
     "\n",
     "button0 = tk.Button(master=frm, text='Rock', compound=tk.TOP, height=5, width=15)\n",
@@ -199,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
