--- a/study06_class_tkinter.ipynb
+++ b/study06_class_tkinter.ipynb
@@ -45,7 +45,9 @@
     "        # ランダムに敵の手を決める場合\n",
     "        # self.e_hand = random.randint(0, 2)\n",
     "        # プレイヤーの手を見て、敵の手を決める。必ず敵が勝つ。\n",
-    "        self.e_hand = self.y_hand - 1\n",
+    "        # self.e_hand = self.y_hand - 1\n",
+    "        # プレイヤーの手を見て、敵の手を決める。必ずプレイヤーが勝つ。\n",
+    "        self.e_hand = self.y_hand + 1\n",
     "\n",
     "    def judge(self):\n",
     "        self.judgement = (self.y_hand - self.e_hand + 3) % 3\n",
