--- a/study06_class_tkinter.ipynb
+++ b/study06_class_tkinter.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "class RockPaperScissors:\n",
     "    HANDS = {0 : 'Rock', 1 : 'Scissors', 2 : 'Paper'}\n",
-    "    JUDGE = {0 : \"DRAW\", 1 : \"LOSE\", 2 : \"WIN\", 99 : \"???\"}\n",
+    "    JUDGE = {0 : \"DRAW\", 1 : \"You LOSE.\", 2 : \"You WIN.\", 99 : \"???\"}\n",
     "\n",
     "    # Initialize RPS.\n",
     "    def __init__(self):\n",
@@ -118,7 +118,7 @@
    "metadata": {},
    "source": [
     "## 4. メイン関数\n",
-    "  - tiinterでGUIを作り、じゃんけんゲームを実行する。"
+    "  - tkinterでGUIを作り、じゃんけんゲームを実行する。"
    ]
   },
   {
