--- a/study06_class_tkinter.ipynb
+++ b/study06_class_tkinter.ipynb
@@ -88,8 +88,7 @@
     "        \n",
     "    def showResult(self):\n",
     "        self.game_mode = GAME_END\n",
-    "        return self.result\n",
-    "        "
+    "        return self.result"
    ]
   },
   {
@@ -140,6 +139,7 @@
     "root.title(\"Rock Paper Scissors\")\n",
     "#root.minsize(width=window_width, height=window_height)\n",
     "\n",
+    "# メッセージ表示用\n",
     "msg = tk.StringVar()\n",
     "\n",
     "# Frame as Widget Container\n",
@@ -160,16 +160,20 @@
     "        button0.config(relief=tk.RAISED, fg='black')\n",
     "        button1.config(relief=tk.RAISED, fg='black')\n",
     "        button2.config(relief=tk.SUNKEN, fg='red')\n",
+    "    #メッセージ表示\n",
     "    msg.set(game_play(n))\n",
     "\n",
+    "# button Rock\n",
     "button0 = tk.Button(master=frm, text='Rock', compound=tk.TOP, height=5, width=15)\n",
     "button0['command'] = lambda: btn_clicked(0)\n",
     "button0.grid(row=1, column=1)\n",
     "\n",
+    "# button Paper\n",
     "button1 = tk.Button(master=frm, text='Paper', compound=tk.TOP, height=5, width=15)\n",
     "button1['command'] = lambda: btn_clicked(1)\n",
     "button1.grid(row=1, column=2)\n",
     "\n",
+    "# button Scissors\n",
     "button2 = tk.Button(master=frm, text='Scissors', compound=tk.TOP, height=5, width=15)\n",
     "button2['command'] = lambda: btn_clicked(2)\n",
     "button2.grid(row=1, column=3)\n",
@@ -197,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
