--- a/study06_class_tkinter.ipynb
+++ b/study06_class_tkinter.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classを使ってじゃんけんゲームを作る。UIはTkinter。"
+    "# Classを使ってじゃんけんゲームを作る。UIはTkinter。\n",
+    "Rock Paper Scissors Game by using class method and tkinter."
    ]
   },
   {
@@ -21,6 +22,7 @@
    "metadata": {},
    "source": [
     "## 1. じゃんけんゲームクラス\n",
+    "  - If the variable name of the method in the class is the same as the argument name, an error will occur, so ***add \"_\" to the argument as a prefix*** .\n",
     "  - class内のメソッドの名前と、引数の名前が同一の場合エラーとなるため、***引数の接頭辞に\"_\"***を付けることにする。"
    ]
   },
@@ -63,6 +65,7 @@
    "metadata": {},
    "source": [
     "## 2. ゲームの流れを定義するクラス\n",
+    "  - Create an instance of the じゃんけん class to advance the game. The instance takes the player's hand as an argument \n",
     "  - じゃんけんクラスのインスタンスを作り、プレイヤーの手を引き数に取りゲームを一通り進める。"
    ]
   },
