--- a/study06_class_tkinter.ipynb
+++ b/study06_class_tkinter.ipynb
@@ -99,6 +99,7 @@
    "metadata": {},
    "source": [
     "## 3. ゲームを実行する\n",
+    "  - Execute the class that defines the game flow.\n",
     "  - ゲームの流れを定義するクラスを実行する。"
    ]
   },
@@ -120,6 +121,7 @@
    "metadata": {},
    "source": [
     "## 4. メイン関数\n",
+    "  - Create a GUI with tkinter and run the Janken game.\n",
     "  - tkinterでGUIを作り、じゃんけんゲームを実行する。"
    ]
   },
